--- a/fdevsec.yaml
+++ b/fdevsec.yaml
@@ -3,3 +3,15 @@ version: v1
 id:
   org: b27824ac-8fb3-461d-a76d-ea3c92ef71e4
   app: 7114387c-8256-47d1-8e7a-abbbe14a936c
+
+scanners: 
+- sast
+- dast
+- secret 
+- sca
+- iac
+- container
+dast:
+url: http://a1dd2b64140704aba901772b6af6fb24-584754207.us-east-1.elb.amazonaws.com:8081 
+fortipentest_scanner: false #true|false 
+full_scan: true #true|false
